--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header{
+  background: #808080;
+  padding: 10px;
+
+}
+
+header h1{
+  color: white;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.skeleton-wrapper{
+
+  background: #ccc;
+  height: 40;
+  width: 100%;
+}
